//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  phone String
  address String
  avatar String
  name String [not null]
  date_of_birth String
  country String
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime
  confirmPassword String
  roleId String
  verificationCode String
  verificationCodeExpiresAt DateTime
  isVerified Boolean [not null, default: false]
  role roles
  points Int [default: 0]
  flightCrawls user_on_flight_crawls [not null]
  hotelCrawlReviews hotel_crawl_reviews [not null]
  hotelCrawls user_on_hotel_crawls [not null]
  bookings bookings [not null]
  tours user_on_tours [not null]
  tourReviews tour_reviews [not null]
  reviewReplyTour replies_tour [not null]
  reviewReplyHotel replies_hotel [not null]
  roadVehicles user_on_road_vehicles [not null]
  Payment payments [not null]
}

Table roles {
  id String [pk]
  name String [unique, not null]
  users users [not null]
}

Table hotel_crawl {
  id String [pk]
  hotel_names String [not null]
  location String [not null]
  price Float
  score_hotels Float
  number_rating Float
  star_number Float
  received_time String [not null]
  giveback_time String [not null]
  description String
  hotel_link String
  place String
  image String
  image_2 String
  image_3 String
  image_4 String
  image_5 String
  userId String
  number_of_seats_remaining Int
  rooms rooms [not null]
  users user_on_hotel_crawls [not null]
  hotelCrawlReviewa hotel_crawl_reviews [not null]
  bookings bookings [not null]
  Tour tours [not null]
}

Table rooms {
  id String [pk]
  hotelId String [not null]
  type RoomType [not null]
  pricePerDay Float [not null]
  available Boolean [not null, default: true]
  hotel hotel_crawl [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Booking bookings [not null]
}

Table flight_crawl {
  id String [pk]
  brand String [not null]
  price Float [not null]
  start_time String [not null]
  start_day DateTime [not null]
  end_day DateTime [not null]
  end_time String [not null]
  trip_time String [not null]
  take_place String [not null]
  destination String [not null]
  trip_to String [not null]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
  userId String
  image String
  number_of_seats_remaining Int
  type_ticket TicketType [not null]
  baggage_weight BaggageWeight [not null]
  type FlightType
  return_start_time String
  return_start_day DateTime
  return_end_day DateTime
  return_end_time String
  return_trip_time String
  flightCode String [unique]
  users user_on_flight_crawls [not null]
  bookings bookings [not null]
  Ticket Ticket [not null]
  Tour tours [not null]
}

Table Ticket {
  id String [pk]
  type_ticket TicketType [not null]
  price Float [not null]
  baggage_weight BaggageWeight [not null]
  baggage_price Float [not null]
  flightId String [not null]
  flight flight_crawl [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Booking bookings [not null]
}

Table tours {
  id String [pk]
  name String [not null]
  userId String [not null]
  description String
  price Float
  original_price Float
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime
  start_date DateTime
  end_date DateTime
  starting_gate String
  sight_seeing String
  cuisine String
  suitable String
  ideal_time String
  road_vehicle String
  voucher String
  time_trip String
  baby_price Float
  child_price Float
  adult_price Float
  type String
  image String [not null]
  image_2 String
  image_3 String
  image_4 String
  image_5 String
  rating Float [default: 1]
  number_of_seats_remaining Int
  totalAmount Float
  hotelId String
  hotel hotel_crawl
  flightId String
  flight flight_crawl
  roadVehicleId String
  roadVehicle road_vehicles
  tour_code String
  bookings bookings [not null]
  users user_on_tours [not null]
  tourReviews tour_reviews [not null]
  TripSchedule trip_schedules [not null]
}

Table trip_schedules {
  id String [pk]
  tourId String [not null]
  tour tours [not null]
  day Int [not null]
  schedule String [not null]
  date DateTime [not null]
}

Table road_vehicles {
  id String [pk]
  brand String
  price Float
  number_of_seat String
  start_time String
  start_day DateTime
  end_day DateTime
  end_time String
  trip_time String
  take_place String
  destination String
  location String
  isFavorite Boolean [default: false]
  number_of_seats_remaining Int
  image String
  users user_on_road_vehicles [not null]
  bookings bookings [not null]
  Tour tours [not null]
}

Table bookings {
  id String [pk]
  tourId String
  userId String [not null]
  flightCrawlId String
  hotelCrawlId String
  roadVehicleId String
  tour tours
  flightCrawls flight_crawl
  hotelCrawls hotel_crawl
  roadVehicles road_vehicles
  user users [not null]
  flightQuantity Int
  hotelQuantity Int
  tourQuantity Int
  roadVehicleQuantity Int
  flightPrice Float
  hotelPrice Float
  tourPrice Float
  roadVehiclePrice Float
  roomId String
  room rooms
  ticketFlighttId String
  ticket Ticket
  totalAmount Float
  createdAt DateTime [default: `now()`, not null]
  checkInDate DateTime
  checkOutDate DateTime
  flightDate DateTime
  status BookingStatus [not null, default: 'PENDING']
  confirmationTime DateTime
  Payment payments [not null]
}

Table payments {
  id String [pk]
  bookingId String
  userId String [not null]
  amount Float [not null]
  paymentMethod PaymentMethod [not null]
  status PaymentStatus [not null]
  orderId String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  booking bookings
  user users [not null]
}

Table tour_reviews {
  id String [pk]
  content String [not null]
  rating Float [default: 1]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime
  userId String [not null]
  users users [not null]
  tourId String [not null]
  tours tours [not null]
  reviewReplyTour replies_tour [not null]
}

Table hotel_crawl_reviews {
  id String [pk]
  content String [not null]
  rating Float [default: 1]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime
  userId String [not null]
  users users [not null]
  hotelCrawlId String [not null]
  hotelCrawls hotel_crawl [not null]
  ReviewReplyHotel replies_hotel [not null]
}

Table replies_hotel {
  id String [pk]
  content String [not null]
  review hotel_crawl_reviews [not null]
  reviewId String [not null]
  user users [not null]
  userId String [not null]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
  parentReplyId String
  parentReply replies_hotel
  replies replies_hotel [not null]
}

Table replies_tour {
  id String [pk]
  content String [not null]
  review tour_reviews [not null]
  reviewId String [not null]
  user users [not null]
  userId String [not null]
  createAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
  parentReplyId String
  parentReply replies_tour
  replies replies_tour [not null]
}

Table user_on_tours {
  userId String [not null]
  users users [not null]
  tourId String [not null]
  tours tours [not null]

  indexes {
    (userId, tourId) [pk]
  }
}

Table user_on_flight_crawls {
  userId String [not null]
  users users [not null]
  flightCrawlId String [not null]
  flightCrawls flight_crawl [not null]

  indexes {
    (userId, flightCrawlId) [pk]
  }
}

Table user_on_hotel_crawls {
  userId String [not null]
  users users [not null]
  hotelCrawlId String [not null]
  hotelCrawls hotel_crawl [not null]

  indexes {
    (userId, hotelCrawlId) [pk]
  }
}

Table user_on_road_vehicles {
  userId String [not null]
  users users [not null]
  roadVehicleId String [not null]
  roadVehicles road_vehicles

  indexes {
    (userId, roadVehicleId) [pk]
  }
}

Enum RoomType {
  SINGLE
  DOUBLE
  SUITE
  DELUXE
}

Enum FlightType {
  ONE_WAY
  ROUND_TRIP
}

Enum BaggageWeight {
  FREE_7KG
  WEIGHT_15KG
  WEIGHT_25KG
  WEIGHT_32KG
}

Enum TicketType {
  ECONOMY
  BUSINESS
  FIRST_CLASS
}

Enum BookingStatus {
  PENDING
  CONFIRMED
  CANCELED
  SUCCESS
  WAITING_PAYMENT
}

Enum PaymentMethod {
  CASH
  CREDIT_CARD
  DEBIT_CARD
  PAYPAL
  BANK_TRANSFER
}

Enum PaymentStatus {
  PENDING
  COMPLETED
  FAILED
}

Ref: users.roleId > roles.id

Ref: rooms.hotelId > hotel_crawl.id

Ref: Ticket.flightId > flight_crawl.id

Ref: tours.hotelId > hotel_crawl.id

Ref: tours.flightId > flight_crawl.id

Ref: tours.roadVehicleId > road_vehicles.id

Ref: trip_schedules.tourId > tours.id [delete: Cascade]

Ref: bookings.tourId > tours.id

Ref: bookings.flightCrawlId > flight_crawl.id

Ref: bookings.hotelCrawlId > hotel_crawl.id

Ref: bookings.roadVehicleId > road_vehicles.id

Ref: bookings.userId > users.id

Ref: bookings.roomId > rooms.id

Ref: bookings.ticketFlighttId > Ticket.id

Ref: payments.bookingId > bookings.id [delete: Set Null]

Ref: payments.userId > users.id

Ref: tour_reviews.userId > users.id

Ref: tour_reviews.tourId > tours.id

Ref: hotel_crawl_reviews.userId > users.id

Ref: hotel_crawl_reviews.hotelCrawlId > hotel_crawl.id

Ref: replies_hotel.reviewId > hotel_crawl_reviews.id

Ref: replies_hotel.userId > users.id

Ref: replies_hotel.parentReplyId - replies_hotel.id

Ref: replies_tour.reviewId > tour_reviews.id

Ref: replies_tour.userId > users.id

Ref: replies_tour.parentReplyId - replies_tour.id

Ref: user_on_tours.userId > users.id

Ref: user_on_tours.tourId > tours.id

Ref: user_on_flight_crawls.userId > users.id

Ref: user_on_flight_crawls.flightCrawlId > flight_crawl.id

Ref: user_on_hotel_crawls.userId > users.id

Ref: user_on_hotel_crawls.hotelCrawlId > hotel_crawl.id

Ref: user_on_road_vehicles.userId > users.id

Ref: user_on_road_vehicles.roadVehicleId > road_vehicles.id